--- a/index.html
+++ b/index.html
@@ -5,10 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pythagoras Calculator</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
+
 <body>
-    <h1>Teste2</h1>
-    <img src="./assets/triangle.jpg" alt="">
+    <h1 class="display-1">Pythagoras Calculator</h1>
+
+    <div id="principal" class="container text-center">
+
+        <div class="row align-items-center">
+          <div class="col-4">
+            <img src="./assets/triangulo.png" class="img-thumbnail" alt="...">
+
+          </div>
+          <div class="col">
+            <h4>Qual lado deseja calcular?</h4>
+            <select class="form-select" aria-label="Default select example">
+                <option selected value="1">Lado a</option>
+                <option value="2">Lado b</option>
+                <option value="3">Lado c</option>
+              </select>
+
+              <form>
+                <fieldset disabled>
+
+                  <div class="mb-3">
+                    <label for="disabledNumberInput" class="form-label">Lado</label>
+                    <input type="number" id="disabledNumberInput1" class="form-control" placeholder="">
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="disabledNumberInput" class="form-label">Lado</label>
+                    <input type="number" id="disabledNumberInput2" class="form-control" placeholder="">
+                  </div>
+
+
+                  <button type="submit" class="btn btn-outline-secondary">Submit</button>
+                </fieldset>
+              </form>
+              
+          </div>
+        </div>
+      </div>
 
 </body>
+<!--AO CLICAR DEVE LER O LADO E COLOCAR LADOS CORRESPONDENTES NO FORM E REMOVER DISABLED-->
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </html>
