--- a/index.html
+++ b/index.html
@@ -22,11 +22,24 @@
           </div>
           <div class="col">
             <h4>Qual lado deseja calcular?</h4>
-            <select class="form-select" aria-label="Default select example">
-                <option selected value="1">Lado a</option>
-                <option value="2">Lado b</option>
-                <option value="3">Lado c</option>
-              </select>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+              <label class="form-check-label" for="flexRadioDefault1">
+                Lado a
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Lado b
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Lado c
+              </label>
+            </div>
 
               <form>
                 <fieldset disabled>
@@ -42,7 +55,7 @@
                   </div>
 
 
-                  <button type="submit" class="btn btn-outline-secondary">Submit</button>
+                  <button id="button" type="submit" class="btn btn-outline-secondary">Calcular</button>
                 </fieldset>
               </form>
               
@@ -54,4 +67,5 @@
 <!--AO CLICAR DEVE LER O LADO E COLOCAR LADOS CORRESPONDENTES NO FORM E REMOVER DISABLED-->
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+<script src="./assets/script/script.js"></script>
 </html>
