--- a/index.html
+++ b/index.html
@@ -21,41 +21,29 @@
 
           </div>
           <div class="col">
-            <h4>Qual lado deseja calcular?</h4>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-              <label class="form-check-label" for="flexRadioDefault1">
-                Lado a
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Lado b
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Lado c
-              </label>
-            </div>
+
+            <select class="form-select" aria-label="Default select example" id="option" onchange="habilita()">
+              <option selected value="0">Qual lado deseja calcular?</option>
+              <option value="1">Lado a</option>
+              <option value="2">Lado b</option>
+              <option value="3">Lado c</option>
+            </select>
 
               <form>
-                <fieldset disabled>
+                <fieldset>
 
                   <div class="mb-3">
-                    <label for="disabledNumberInput" class="form-label">Lado</label>
-                    <input type="number" id="disabledNumberInput1" class="form-control" placeholder="">
+                    <label for="disabledNumberInput" class="form-label" >Lado</label>
+                    <input type="number" id="field1" class="form-control" placeholder="" disabled required>
                   </div>
 
                   <div class="mb-3">
                     <label for="disabledNumberInput" class="form-label">Lado</label>
-                    <input type="number" id="disabledNumberInput2" class="form-control" placeholder="">
+                    <input type="number" id="field2" class="form-control" placeholder="" disabled required>
                   </div>
 
 
-                  <button id="button" type="submit" class="btn btn-outline-secondary">Calcular</button>
+                  <button id="button" type="submit" class="btn btn-outline-secondary" disabled>Calcular</button>
                 </fieldset>
               </form>
               
