interage com o form

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 <fieldset>
 
                   <div class="mb-3">
-                    <label for="disabledNumberInput" class="form-label" >Lado</label>
+                    <label for="disabledNumberInput" class="form-label" id="label1" >Lado</label>
                     <input type="number" id="field1" class="form-control" placeholder="" disabled required>
                   </div>
 
                   <div class="mb-3">
-                    <label for="disabledNumberInput" class="form-label">Lado</label>
+                    <label for="disabledNumberInput" class="form-label" id="label2" >Lado</label>
                     <input type="number" id="field2" class="form-control" placeholder="" disabled required>
                   </div>
 
 
-                  <button id="button" type="submit" class="btn btn-outline-secondary" disabled>Calcular</button>
+                  <button id="button" type="submit" class="btn btn-outline-secondary" disabled onclick="calcula()">Calcular</button>
                 </fieldset>
               </form>
               
