--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
             <select class="form-select" aria-label="Default select example" id="option" onchange="habilita()">
               <option selected value="0">Qual lado deseja calcular?</option>
-              <option value="1">Lado a</option>
-              <option value="2">Lado b</option>
-              <option value="3">Lado c</option>
+              <option value="1">Lado a | Cateto Oposto</option>
+              <option value="2">Lado b | Cateto Adjacente</option>
+              <option value="3">Lado c | Hipotenusa</option>
             </select>
 
               <form>
