--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <div id="principal" class="container text-center">
 
-        <div class="row align-items-center">
+        <div id="maindiv" class="row align-items-center">
           <div class="col-4">
-            <img src="./assets/triangulo.png" class="img-thumbnail" alt="...">
+            <img src="./assets/triangulo2.png" class="img-thumbnail" alt="...">
 
           </div>
           <div class="col">
@@ -32,14 +32,14 @@
               <form>
                 <fieldset>
 
-                  <div class="mb-3">
-                    <label for="disabledNumberInput" class="form-label" id="label1" >Lado</label>
-                    <input type="number" id="field1" class="form-control" placeholder="" disabled required>
+                  <div id="espaceup" class="mb-3">
+                    <label for="disabledNumberInput" class="form-label" id="label1" ></label>
+                    <input type="number" id="field1" class="form-control" placeholder="" disabled>
                   </div>
 
                   <div class="mb-3">
-                    <label for="disabledNumberInput" class="form-label" id="label2" >Lado</label>
-                    <input type="number" id="field2" class="form-control" placeholder="" disabled required>
+                    <label for="disabledNumberInput" class="form-label" id="label2" ></label>
+                    <input type="number" id="field2" class="form-control" placeholder="" disabled>
                   </div>
 
                 </fieldset>
@@ -59,9 +59,9 @@
           </div>
           <div class="col">
             <div id = "result">
-              <h1 class="display-6">Resultado</h1>
+              <h1 id='titulo' class="display-6 resultado">Resultado</h1>
               
-              <div  id="result_text" >
+              <div  id="result_text" class="resultado" >
 
               </div>
 
